# wolong

./: .gitignore  README.md  electron-builder.json5  index.d.ts  index.html  index.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: test.yml  windows-release.yml
electron/: electron-env.d.ts  main.ts  preload.ts
electron/runtime/: autostart.ts  chat.ts  clipboard.ts  env.ts  ipc.ts  launcher.ts  native.ts  screenshot.ts  shortcuts.ts  tray.ts  types.ts  windows.ts
electron/storage/: realm.ts
electron/types/: electron-augment.d.ts  electron-shim.d.ts
native/core/: Cargo.toml  index.d.ts  wolong_core.node  wolong_core.node.old.1762680719758
native/core/src/: app_index.rs  clipboard.rs  error.rs  icon.rs  input.rs  lib.rs  screenshot.rs  utils.rs
public/fonts/: README.md
scripts/: download-fonts.mjs  generate-icons.mjs  postbuild-native.mjs
src/: index.css  main.tsx
src/components/: Markdown.tsx
src/components/ui/: kbd.tsx  scroll-area.tsx  title-bar.tsx
src/utils/: arc.ts  chatStreamProxy.ts  format.test.ts  format.ts  pinyin.test.ts  pinyin.ts
src/windows/: ChatApp.tsx  ClipboardApp.tsx  LauncherApp.test.ts  LauncherApp.tsx  ScreenshotApp.tsx  SettingsApp.tsx
src/windows/settings/: AboutSettingsTab.tsx  AiSettingsTab.tsx  GeneralSettingsTab.tsx  IndexingSettingsTab.tsx  ShortcutSettingsTab.tsx  tabs.ts
