[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Wolong Project"]

[lib]
name = "wolong_core"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
napi = { version = "2", features = ["napi4", "tokio_rt", "serde-json"] }
napi-derive = "2"
once_cell = "1.19"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
walkdir = "2.5"
winreg = "0.52"
sha2 = "0.10"
base64 = "0.21"
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Environment",
  "Win32_System_DataExchange",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
napi-build = "2"
